# credit-acceptance-ml-ai-flywheel-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
airflow_dags/: credit_approval_training_dag.py
data/: README.md
data/processed/: credit_approval_test.csv  credit_approval_train.csv  dealer_bandit_context.csv  lifecycle_uplift_dataset.csv
data/raw/: applications.csv  dealers.csv  payments.csv  vehicles.csv
docs/: architecture.md  flywheel.md
infra/docker/: Dockerfile.api
infra/k8s/: deployment-api.yaml  service-api.yaml
src/ca_ml_flywheel/: config.py
src/ca_ml_flywheel/features/: credit_features.py
src/ca_ml_flywheel/genai/: underwriter_copilot.py
src/ca_ml_flywheel/models/: bandit_recommender.py  train_approval_model.py  train_lifecycle_uplift.py
src/ca_ml_flywheel/serving/: api.py  monitoring.py
tests/: test_features.py
