[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-acceptance-ml-ai-flywheel-demo"
version = "0.1.0"
description = "Demo ML & Gen-AI flywheel architecture for a used-car finance business."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Freeman Jackson" }
]

dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "xgboost",
  "fastapi",
  "uvicorn",
  "pydantic",
  "mlflow",
  "joblib",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/<your-username>/credit-acceptance-ml-ai-flywheel-demo"
Repository = "https://github.com/<your-username>/credit-acceptance-ml-ai-flywheel-demo"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ca_ml_flywheel*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = [
  "tests",
]
